working on styling and DOM

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,134 @@
-img {
-    padding:20px;
+* {
+    box-sizing: border-box;
 }
+
+body {
+    font-family: 'Maitree', serif;
+    font-size: 16px;
+    background: #555;
+}
+
+.wrapper {
+    width: 500px;
+    margin: auto;
+    margin-top: 40px;
+}
+
+#title {
+    margin: auto;
+}
+
+.container {
+    padding: 0px;
+}
+
+.main-layout {
+    margin: auto;
+    margin-top: 10px;
+    background: #222;
+    border-radius: 20px;
+    text-align: center;
+}
+
+/* .container {
+    margin: auto;
+    margin-top: 20px;
+    width: 500px;
+    background: #222;
+    border-radius: 20px;
+    padding: 10px;
+} */
+
+h1 {
+    font-family: 'Mystery Quest', cursive;
+    text-align: center;
+    color: #eee;
+    font-size: 36px;
+    padding: 20px;
+
+}
+
+h2 {
+    font-family: 'Maitree', serif;
+    text-align: center;
+    color: #eee;
+    font-size: 24px;
+    padding-top: 20px;
+}
+
+hr {
+    width: 70%;
+    border: solid 1px #eee;
+}
+
+
+
+/* img {
+    margin: 12px;
+    padding: 5px;
+    width: 20%; 
+} */
+
+img {
+    padding: 5px;
+    margin: 5px;
+    width: 22%;
+}
+
+img:hover, img:focus {
+   border: solid 2px #eee
+}
+
+#instructions {
+    margin: auto;
+    width: 90%;
+    padding-top: 20px;
+    padding-bottom: 0px;
+}
+
+p {
+    color: #eee;
+    text-indent: 50px;
+    line-height: 150%;
+    text-align: justify;
+}
+
+.button {
+    text-align: center;
+    font-size: 13px;
+    width: 120px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 0px;
+    background: #eee;
+    border-radius: 10px;
+}
+
+.hide {
+    display: none;
+}
+
+.score {
+    float: left;
+    margin: 0 auto;
+    margin: 20px;
+    width: 30%;
+    background: #555;
+    padding: 10px;
+}
+
+
+
+/* 
+FONT BANK
+
+font-family: 'Elsie', cursive;
+font-family: 'Flamenco', cursive;
+font-family: 'Mystery Quest', cursive;
+font-family: 'Glass Antiqua', cursive;
+font-family: 'Cinzel', serif;
+font-family: 'Maitree', serif;
+font-family: 'Cormorant Infant', serif;
+
+*/
