--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     margin-top: 100px;
     font-family: 'Glass Antiqua', cursive;
     font-size: 14px;
-    background: #555;
+    background-image: url(../images/bkg-pattern.png);
 }
 
 #title {
@@ -26,7 +26,7 @@ body {
 h1 {
     font-family: 'Mystery Quest', cursive;
     text-align: center;
-    color: #eee;
+    color: #e4e8da;
     font-size: 36px;
     padding: 20px;
 
@@ -34,14 +34,14 @@ h1 {
 
 h2 {
     text-align: center;
-    color: #eee;
+    color: #e4e8da;
     font-size: 24px;
     padding-top: 20px;
 }
 
 h3 {
     text-align: center;
-    color: #eee;
+    color: #e4e8da;
     font-size: 18px;
     padding-top: 20px;
     text-decoration: underline;
@@ -49,7 +49,7 @@ h3 {
 
 hr {
     width: 70%;
-    border: solid 1px #eee;
+    border: solid 1px #e4e8da;
 }
 
 
@@ -72,7 +72,7 @@ img:hover, img:focus {
 
 p {
     font-family: 'Cinzel', serif;
-    color: #eee;
+    color: #e4e8da;
     text-indent: 50px;
     line-height: 150%;
     text-align: justify;
@@ -86,7 +86,7 @@ p {
     padding: 5px;
     background: #333;
     border-radius: 10px;
-    color: #eee;
+    color: #e4e8da;
 }
 
 .button:hover {
